config.json: Multiple updates: * updated nav_links in header * updated __metadata in nav_links * updated icon in nav_links * updated new_window in nav_links * updated no_follow in nav_links * updated type in nav_links * updated label in nav_links * updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,6 +18,15 @@
                 "style": "link"
             },
             {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "icon": "dribbble",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
+            },
+            {
                 "label": "Blog",
                 "url": "/blog/",
                 "style": "link"
